adding game ending and creation
